# ValidadorBETAEquipamiento

./: .gitignore  Abrir_Validador_EMTP.command  Exportar_Validador_EMTP.command  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: validator.py
